# Giovanni

./: .gitignore  README.md
aesir/: Makefile
aesir/EDDA/: Makefile
aesir/solr_schemas/: schema.xml
agiovanni/: Makefile.PL  run_python_tests.sh
agiovanni/Dev-Tools/: Makefile.PL  giovanni.bsh  giovanni.csh
agiovanni/Giovanni-Agent/: Changes  MANIFEST  Makefile.PL
agiovanni/Giovanni-Algorithm-AreaAveragerNco/: Changes  MANIFEST  Makefile.PL
agiovanni/Giovanni-Algorithm-Correlation/: AUTHORS  COPYING  Makefile.in  README  TODO  configure  configure.in
agiovanni/Giovanni-Algorithm-Correlation/src/: AIRS_Temp_A.20090117.500hPa.nc.cdl  AIRS_Temp_A.20090117.cdl  AIRS_Temp_A.20090118.500hPa.nc.cdl  AIRS_Temp_A.20090118.cdl  AIRS_Temp_A.20090119.500hPa.nc.cdl  AIRS_Temp_A.20090119.cdl  AIRS_Temp_D.20090117.500hPa.nc.cdl  AIRS_Temp_D.20090117.cdl  AIRS_Temp_D.20090118.500hPa.nc.cdl  AIRS_Temp_D.20090118.cdl  AIRS_Temp_D.20090119.500hPa.nc.cdl  AIRS_Temp_D.20090119.cdl  CorrelationCheck.slk  MOD08_1.cdl  MOD08_2.cdl  MOD08_3.cdl  MOD08_4.cdl  MYD08_1.cdl  MYD08_2.cdl  MYD08_3.cdl  MYD08_4.cdl  Makefile.am  Makefile.in  accumulate.c  array_regression.c  cdl2nc.c  cdldiff.c  check.c  find_bounds.c  find_var_by_units.c  nccorrelate.1  nccorrelate.c  nccorrelate.h  parse_varstring.c  read_att.c  read_nc_var.c  run_nccorrelate_test.c  system_call.c  t_accumulate.c  t_accumulate_1a.cdl  (+15 more)
agiovanni/Giovanni-Algorithm-CorrelationWrapper/: Changes  MANIFEST  Makefile.PL  README
agiovanni/Giovanni-Algorithm-Shapefiles/: Makefile.PL
agiovanni/Giovanni-Algorithm-Wrapper/: README  (+2 more)
agiovanni_dataaccess/: Makefile.PL
agiovanni_giovanni/: Makefile
agiovanni_shapes/: Makefile  gpmLandMask.json  gpmSeaMask.json  state_dept_countries.dbf  state_dept_countries.json  state_dept_countries.shx  tl_2014_us_state.json  watersheds.dbf  watersheds.json  watersheds.shx
agiovanni_www/: Makefile
(+1688 files in other folders)
